# darkfi

./: Cargo.toml  default.nix  flake.nix
examples/halo2/: Cargo.toml
examples/halo2/src/: circuit.rs  lib.rs
examples/vm/: Cargo.toml
examples/vm/src/: error.rs  lib.rs  vm2.rs  vm2_serial.rs
proof/: mint.zk
script/: mint.zk  zkas.py
script/zkas/: bincode_output.py  text_output.py  types.py
src/: lib.rs  vm2.rs  vm2_serial.rs
zkas/: Cargo.toml
zkas/src/: lib.rs  output.rs  parser.rs  state.rs  syntax.rs  types.rs
